Устранён баг скрипта

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <div class="wraper">
 
     <div class="modal_fon">
-        <!--Модальные окна схема -->
-        <div class="schem_big_block map_block" id="map_big">
+        <!--/////////////////////////////////////////Модальные окна схема/////////////////////////////////////////// -->
+        <!--Карта -->
+        <div class="schem_big_block map_block modal" id="map_big">
             <a href="javascript:void(0)" class=" map_close"><i></i></a>
             <div id="map"></div>
         </div>
-        <div class="schem_big_block" id="schem_big">
+        <!--/Карта -->
+        <!--Схема проезда -->
+        <div class="schem_big_block modal" id="schem_big">
             <a href="javascript:void(0)" class=" scheme_close"><i></i></a>
             <div class="schem_big_block__schem_block">
                 <div class="schem_big_block__schem_block_nav" id="may_nav_schem">
@@ -34,8 +37,10 @@
                 </div>
             </div>
         </div>
+        <!--/Схема проезда-->
+        <!--/////////////////////////////////////////Модальные окна поиск/////////////////////////////////////////// -->
         <!--SERCH-->
-        <div class="serch_modal">
+        <div class="serch_modal modal">
             <div class="serch_modal__serch_block">
                 <a href="javascript:void(0)" class="close close_search"><i></i></a>
                 <div class="ya-site-form ya-site-form_inited_no"
@@ -88,8 +93,9 @@
             </div>
         </div>
         <!--**********************************************************************************************************-->
-        <!--Заводы подробно-->
-        <div class="monufactur_bkock midea" id="midea">
+        <!--/////////////////////////////////////////Модальные окна подробно заводы/////////////////////////////////////////// -->
+        <!--midea-->
+        <div class="monufactur_bkock midea modal" id="midea">
             <a href="javascript:void(0)" class="close monufacture_close"><i></i></a>
             <div class="midea_text">
                 <p class="midea_text_info">
@@ -112,7 +118,8 @@
                 </p>
             </div>
         </div>
-        <div class="monufactur_bkock aux" id="aux">
+        <!--aux-->
+        <div class="monufactur_bkock aux modal" id="aux">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
 
             <p class="autor">Green</p>
@@ -143,7 +150,8 @@
                 anim id est laborum.
             </p>
         </div>
-        <div class="monufactur_bkock chigo" id="chigo">
+        <!--chigo-->
+        <div class="monufactur_bkock chigo modal" id="chigo">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
 
             <p class="autor">Green</p>
@@ -174,6 +182,7 @@
                 anim id est laborum.
             </p>
         </div>
+        <!--galans-->
         <div class="monufactur_bkock galanz" id="galanz">
             <a href="javascript:void(0)" class="close monufacture_close"><i></i></a>
             <div class="midea_text">
@@ -197,7 +206,8 @@
                 </p>
             </div>
         </div>
-        <div class="monufactur_bkock gree" id="gree">
+        <!--gree-->
+        <div class="monufactur_bkock gree modal" id="gree">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
             <p class="data">28.10.2017</p>
             <p class="section">Заводы</p>
@@ -226,7 +236,8 @@
                 anim id est laborum.
             </p>
         </div>
-        <div class="monufactur_bkock haier" id="haier">
+        <!--heier-->
+        <div class="monufactur_bkock haier modal" id="haier">
             <a href="javascript:void(0)" class="close monufacture_close"><i></i></a>
             <div class="haier_text">
                 <p class="haier_text_info">
@@ -249,14 +260,11 @@
                 </p>
             </div>
         </div>
-        <div class="monufactur_bkock hisense" id="hisanse">
+        <!--hisanse-->
+        <div class="monufactur_bkock hisense modal" id="hisanse">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
-
-
             <div class="hisense_img">
-
                 <img src="img/hisense.jpg" alt="hisense" title="hisense">
-
             </div>
             <div class="hisense_info_line">
                 <p>
@@ -278,14 +286,11 @@
                 anim id est laborum.
             </p>
         </div>
-        <div class="monufactur_bkock mhi" id="mhi">
+        <!--mhi-->
+        <div class="monufactur_bkock mhi modal" id="mhi">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
-
-
             <div class="mhi_img">
-
                 <img src="img/mhi.jpg" alt="mhi" title="mhi">
-
             </div>
             <div class="mhi_info_line">
                 <p>
@@ -307,14 +312,11 @@
                 anim id est laborum.
             </p>
         </div>
-        <div class="monufactur_bkock micubishi" id="micubichi">
+        <!--micubihi-->
+        <div class="monufactur_bkock micubishi modal" id="micubichi">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
-
-
             <div class="micubishi_img">
-
                 <img src="img/micubishi.jpg" alt="micubishi" title="micubishi">
-
             </div>
             <div class="micubishi_info_line">
                 <p>
@@ -336,14 +338,11 @@
                 anim id est laborum.
             </p>
         </div>
-        <div class="monufactur_bkock tcl" id="tcl">
+        <!--tcl-->
+        <div class="monufactur_bkock tcl modal" id="tcl">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
-
-
             <div class="tcl_img">
-
                 <img src="img/tcl.jpg" alt="tcl" title="tcl">
-
             </div>
             <div class="tcl_info_line">
                 <p>
@@ -365,14 +364,11 @@
                 anim id est laborum.
             </p>
         </div>
-        <div class="monufactur_bkock hitachi" id="hitachi">
+        <!--hitachi-->
+        <div class="monufactur_bkock hitachi modal" id="hitachi">
             <a href="javascript:void(0)" class="close close monufacture_close"><i></i></a>
-
-
             <div class="hitachi_img">
-
-                <img src="img/mhi.jpg" alt="mhi" title="mhi">
-
+               <img src="img/mhi.jpg" alt="mhi" title="mhi">
             </div>
             <div class="hisense_info_line">
                 <p>
@@ -394,9 +390,11 @@
                 anim id est laborum.
             </p>
         </div>
-        <!--Заводы окончание-->
-        <div class="power_calculator" id="power_calcul">
+        <!--/Заводы окончание-->
+        <!--//////////////////////////////////////КАЛЬКУЛЯТОР РАСЧЁТА МОЩНОСТИ////////////////////////////////////////////////////////////-->
+        <div class="power_calculator modal" id="power_calcul">
             <p class="help" id="insol">
+                <!--Подсказка инсоляция -->
                 <span class="arow_help"></span>
                 Количество солнечной энергии, проникающей в помещение.
                 Размер окон в соответствии с СНИПами Для жилых помещений. Если окна большие – вводите ориентацию «Юг,
@@ -412,6 +410,7 @@
 
 
             </p>
+            <!--Подсказка мощность остальной бытовой ехники -->
             <p class="help" id="power_t">
                 <span class="arow_help"></span>
                 Дополнительная оборудование в помещении, которое выделяет тепло. Чтобы верно заполнить это поле - на
@@ -424,6 +423,7 @@
 
 
             </p>
+            <!--Подсказка длина хладотрассы -->
             <p class="help" id="big">
                 <span class="arow_help"></span>
                 Если длина фреонопровода (медных трубок) между внутренним и наружным блоком превышает 6 метров,
@@ -432,6 +432,7 @@
 
 
             </p>
+            <!--Подсказка кратность воздухообмена -->
             <p class="help" id="multiplicily">
                 <span class="arow_help"></span>
                 Определяет скорость охлаждения помещения (инертность системы) – т.е. по умолчанию, для стандартной,
@@ -446,6 +447,7 @@
 
                 Это очень важный параметр, влияющий на желаемую мощность кондиционера и, соответственно, на цену.
             </p>
+            <!--Подсказка высота потолка -->
             <p class="help" id="height">
                 <span class="arow_help"></span>
                 Если помещение на последнем этаже здания (т.е. потолок помещения является плоской кровлей здания), если
@@ -454,6 +456,7 @@
                 пролётом, тепло, По законам термодинамики (горячий воздух вверх, холодный вниз) поднимается с первого на
                 второй этаж, что также требуется учитывать при расчетах.
             </p>
+            <!--Подсказка расчётная мощьность -->
             <p class="help" id="power_rez">
                 <span class="arow_help"></span>
                 Мощность кондиционера по хладопроизводительности не нужно путать с количеством электроэнергии,
@@ -470,6 +473,7 @@
                 тогда, даже не проводя техническое обслуживание 2 года, большая вероятность, что мощности (даже
                 сниженной из-за загрязнения) будет достаточно.
             </p>
+            <!--Подсказка диапазон -->
             <p class="help" id="range">
                 <span class="arow_help"></span>
                 Часто опасаются, что купив в «Вимтех» кондиционер большей мощности придётся больше платить за
@@ -486,11 +490,13 @@
                 экономичность сильно влияет коммунальный тариф. При наличии «левой» проводки - кондиционер становится
                 поразительно экономичным.
             </p>
+            <!--Подсказка кол-во техники -->
             <p class="help" id="tech">
                 <span class="arow_help"></span>
                 Пересчитывается аппаратура, включённая в электророзетки и функционирующая более 3 часов в день, данные
                 указывать в Ваттах (не путать с килоВаттами)
             </p>
+            <!--Подсказка кол-во людей -->
             <p class="help" id="people">
                 <span class="arow_help"></span>
                 Санитарные нормы дают такие значения - в спокойном состоянии полные тепловыделения от человека составят
@@ -774,7 +780,8 @@
                 </div>
             </div>
         </div>
-        <div class="black_panel">
+        <!--//////////////////////////////////////////БОКОВАЯ ЧЁРНАЯ ПАНЕЛЬ////////////////////////////////////////////////////////////// -->
+        <div class="black_panel modal">
             <div class="black_panel_content">
                 <div class="black_panel_header">
                     <a href="javascript:void(0)" class="black_panel_header_kalkul">
@@ -1373,7 +1380,7 @@
                         <div class="slide slide2">
                             <div class="slide_text">
                                 <a href="javascript:void(0)">
-                                    <span>Как быстро будет сделан</span>
+                                    <span>Как быстро будет сделан </span>
                                     монтаж сплит системы?
                                 </a>
                             </div>
