Исправлены все найденные баги в скрипте

--- a/index.html
+++ b/index.html
@@ -3560,7 +3560,7 @@
                         <a href="javascript:void(0)">Интернет-магазин сплит систем в
                             Ростове - самые популярные товары</a>
                         <div class="footer_help_link_line_left_bottom">
-                            <a href="javascript:void(0)"><b>Калькулятор рассчета мощности</b></a>
+                            <a href="javascript:void(0)" class="calcul_footer"><b>Калькулятор рассчета мощности</b></a>
                             <a href="javascript:void(0)"><b>Сплит системы по акции</b></a>
                             <a href="javascript:void(0)"><b>Ответы на распространенные
                                 вопросы</b> <span>(все, что Вы хотели знать,
