Добавлен вызов схемы проезда  в шапке, добавлены ховеры в боковой панели

--- a/index.html
+++ b/index.html
@@ -931,6 +931,20 @@
     <header class="header">
 
         <div class="content">
+            <!--блок с миниатюрами схем-->
+            <div class="miniature_block">
+                <a href="javascript:void(0)" class="close_mini"></a>
+                <a href="javascript:void(0)" class="img">
+                    <img src="img/foto.jpg" alt="foto" title="foto">
+                </a>
+                <a href="#map_big" class="img">
+                    <img src="img/map.jpg" alt="map" title="map">
+                </a>
+                <a href="#schem_big" class="img">
+                    <img src="img/schema.jpg" alt="schema" title="schema">
+                </a>
+            </div>
+            <!--/миниатюры-->
             <!--модальное окно логотип начало -->
             <div class="logo_modal" id="modal_logo">
                 <div class="logo_modal_logo_block">
@@ -1461,13 +1475,13 @@
                 <div class="header_nav_logo_line">
                     <div class="header_nav_logo_line_logo">
                         <a href="index.html">
-                            <span>ВИМТЕХ</span>
+
                             <i>В</i>ИМТЕХ
                         </a>
                         <p><b>пр</b>. <i>Ш</i>олохова, <b>д</b>.101</p>
                     </div>
                     <p class="header_nav_logo_line_sity">Сплит системы в Ростове-на-Дону</p>
-                    <a href="javascript:void(0)" class="header_nav_logo_line_schem">(<span>схема проезда</span>)</a>
+                    <a href="javascript:void(0)" class="header_nav_logo_line_schem" id="schem_header">(<span>схема проезда</span>)</a>
                 </div>
                 <div class="header_nav_katalog_line">
                     <div class="header_nav_katalog">
