Добавлены все ховеры в шапку и крошки

--- a/index.html
+++ b/index.html
@@ -1513,7 +1513,7 @@
                         <div class="time_text">
                             <p>Пн-Пт <i>с</i> 10 <i>до</i> 19</p>
                             <p><span>Сб-Вс</span> <i>с</i> 10 <i>до</i> 19</p>
-                            <h3>(без перерыва)</h3>
+                            <h3 id="schem_time">(без перерыва)</h3>
                         </div>
                     </div>
                     <div class="header__user_info_info_serch">
