--- a/index.html
+++ b/index.html
@@ -1475,8 +1475,8 @@
                 <div class="header_nav_logo_line">
                     <div class="header_nav_logo_line_logo">
                         <a href="index.html">
-
-                            <i>В</i>ИМТЕХ
+                        <img src="img/logo_header.png" alt="bimtex" title="bimtex">
+                            <span><i>В</i>ИМТЕХ</span>
                         </a>
                         <p><b>пр</b>. <i>Ш</i>олохова, <b>д</b>.101</p>
                     </div>
