Добавлены ховеры в aside и  карточку товаров

--- a/index.html
+++ b/index.html
@@ -633,13 +633,14 @@
                                 <div class="name very_big">
                                     <p>Количество техники <span>(ПК,
                         телевизоры, холодильники,
-                        принеры, микроволновки)</span><i class="question_button" data-id="#tech">?</i></p>
+                        принеры, микроволновки)</span><i class="question_button" data-id="#power_t">?</i></p>
                                 </div>
                                 <div class="input_block">
                                     <div class="select">
                                         <input type="text" value="1-2" id="T"><a href="javascript:void(0)"
                                                                                  class="arow"></a>
                                         <ul class="option">
+                                            <li><a href="javascript:void(0)"><i>0</i></a></li>
                                             <li><a href="javascript:void(0)"><i>1-2</i></a></li>
                                             <li><a href="javascript:void(0)"><i>2-3</i></a></li>
                                             <li><a href="javascript:void(0)"><i>3-4</i></a></li>
@@ -654,7 +655,7 @@
                             <div class="power_calculator_coontent_form_base_line">
                                 <div class="name big">
                                     <p>Мощность остальной
-                                        бытовой техники<i class="question_button" data-id="#power_t">?</i></p>
+                                        бытовой техники<i class="question_button" data-id="#tech">?</i></p>
                                 </div>
                                 <div class="input_block">
                                     <input type="text" value="0" id="P_d"> <span class="unit">вт.</span>
