--- a/mini_footer.html
+++ b/mini_footer.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>FOOTER</title>
+    <link rel="stylesheet" href="css/mini_footer.css">
+    <link rel="stylesheet" href="css/font.css">
 </head>
 <body>
 
