Добавлен поиск в миниподвал

--- a/index.html
+++ b/index.html
@@ -3458,7 +3458,7 @@
             </div>
             <div class="mini_footer_act">
                 <div class="mini_footer_act_serch">
-                    <p class="mini_footer_act_serch_input">
+                    <p class="mini_footer_act_serch_input" id="mini_serch">
                         поис<span>к</span>
                     </p>
                     <i class="mini_footer_act_serch_lupa"></i>
