Внесены правки в подменю "По цене"

--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
                             </div>
                         </div>
                         <div class="area_block_inverter_block">
-                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 7 </a>
+                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 9 </a>
                             <div class="area_block_">
                                 <p class="area_block_power_line_block_price_net">
                                     от <span>34 500</span> <i>руб</i>.
@@ -1206,7 +1206,7 @@
                             </div>
                         </div>
                         <div class="area_block_inverter_block">
-                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 7 </a>
+                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 12 </a>
                             <div class="area_block_">
                                 <p class="area_block_power_line_block_price_net">
                                     от <span>34 500</span> <i>руб</i>.
@@ -1252,14 +1252,14 @@
                 </div>
                 <div class="price_block_nav">
                     <ul>
-                        <li><a href="#img1">хорошие</a></li>
-                        <li><a href="#img2">с "наворотами"</a></li>
-                        <li><a href="#img3">лушая цена в Ростове</a></li>
-                        <li><a href="#img4">дизайнерские</a></li>
-                        <li><a href="#img5">сделано НЕ в КИТАЕ</a></li>
-                        <li><a href="#img6">дешёвые</a></li>
-                        <li><a href="#img7">недорогие инверторные</a></li>
-                        <li><a href="#img8">с бесплатной установкой</a></li>
+                        <li><a href="#img1">Хорошие</a></li>
+                        <li><a href="#img2">С "наворотами"</a></li>
+                        <li><a href="#img3">Лушая цена в Ростове</a></li>
+                        <li><a href="#img4">Дизайнерские</a></li>
+                        <li><a href="#img5">Сделано НЕ в КИТАЕ</a></li>
+                        <li><a href="#img6">Дешёвые</a></li>
+                        <li><a href="#img7">Недорогие инверторные</a></li>
+                        <li><a href="#img8">С бесплатной установкой</a></li>
                     </ul>
                 </div>
             </div>
@@ -1561,7 +1561,7 @@
                     </li>
                 </ul>
                 <div class="header_kontakt_line">
-                    <a href="mailto:zakaz@2211687.ru" class="meil"><p>Пишите:</p><i
+                    <a href="mailto:zakaz@2211687.ru?subject=Рассмотреть срочно(Шифр ОВ-особой важности)" class="meil"  target="newtab"><p>Пишите:</p><i
                             class="icon-mail_header"></i> zakaz@2211687.ru</a>
                     <a href="javascript:void(0)" class="ring">
                         <p>Звоните<span>:</span></p>
