--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,15 @@
                 <ul>
                     <li><a href="#">Главная</a></li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#">Сплит системы (каталог)</a></li>
+                    <li class="select"><a href="#">Сплит системы (каталог)</a>
+                        <ul class="select_pod_menu">
+                            <li><a href="#">Потолочные</a></li>
+                            <li><a href="#">Кассетные</a></li>
+                            <li><a href="#">Мультисплит</a></li>
+                            <li><a href="#">VRV</a></li>
+                            <li><a href="#">Очистители воздуха</a></li>
+                         </ul>
+                    </li>
                     <li class="arow"><span></span></li>
                     <li class="select"><a href="#"> Panasonic</a>
                         <ul class="select_pod_menu">
