Добавлены выпадающие списки в хлебные крошки

--- a/index.html
+++ b/index.html
@@ -1589,7 +1589,12 @@
                 <ul>
                     <li><a href="#">Главная</a></li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#">Сплит системы (каталог)</a></li>
+                    <li class="select"><a href="#">Сплит системы (каталог)</a>
+                        <ul class="select_pod_menu">
+                            <li><a href="#">Цены</a></li>
+
+                        </ul>
+                    </li>
                     <li class="arow"><span></span></li>
                     <li class="select"><a href="#"> Panasonic</a>
                         <ul class="select_pod_menu">
@@ -1603,7 +1608,12 @@
                         </ul>
                     </li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#"> Настенные</a></li>
+                    <li class="select"><a href="#"> Настенные</a>
+                        <ul class="select_pod_menu">
+                            <li><a href="#">Потолочные</a></li>
+                            <li><a href="#">Кассетные</a></li>
+                        </ul>
+                    </li>
                     <li class="arow"><span></span></li>
                     <li><p>Mitsubishi Heavy Industries SRK20GH-S / SRC2-GH-S</p></li>
                 </ul>
