Востановлена адаптация калькулятора по высоте, востановлены выпадающие списки в крошках

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 <body>
 <div class="wraper">
-
+    <!--/////////////////////////////////////////Модальное окно вход/регистрация///////////////////////////////// -->
+    <div class="enter_block modal">
+        <a href="javascript:void(0)" class="close close enter_close"><i></i></a>
+    </div>
+    <!--**********************************************************************************************************-->
     <div class="modal_fon">
         <!--/////////////////////////////////////////Модальные окна схема/////////////////////////////////////////// -->
         <!--Карта -->
@@ -94,7 +98,9 @@
                 </div>
             </div>
         </div>
-        <!--**********************************************************************************************************-->
+        <!--********************************************************************************************************* -->
+
+
         <!--/////////////////////////////////////////Модальные окна подробно заводы/////////////////////////////////////////// -->
         <!--midea-->
         <div class="monufactur_bkock midea modal" id="midea">
@@ -1586,11 +1592,8 @@
                     <li class="arow"><span></span></li>
                     <li class="select"><a href="#">Сплит системы (каталог)</a>
                         <ul class="select_pod_menu">
-                            <li><a href="#">Потолочные</a></li>
-                            <li><a href="#">Кассетные</a></li>
-                            <li><a href="#">Мультисплит</a></li>
-                            <li><a href="#">VRV</a></li>
-                            <li><a href="#">Очистители воздуха</a></li>
+                            <li><a href="#">Цены</a></li>
+
                          </ul>
                     </li>
                     <li class="arow"><span></span></li>
@@ -1606,7 +1609,12 @@
                         </ul>
                     </li>
                     <li class="arow"><span></span></li>
-                    <li class="select"><a href="#"> Настенные</a></li>
+                    <li class="select"><a href="#"> Настенные</a>
+                        <ul class="select_pod_menu">
+                            <li><a href="#">Потолочные</a></li>
+                            <li><a href="#">Касетные</a></li>
+                        </ul>
+                     </li>
                     <li class="arow"><span></span></li>
                     <li><p>Mitsubishi Heavy Industries SRK20GH-S / SRC2-GH-S</p></li>
                 </ul>
