Свёрстан блок спасибо

--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
 <div class="wraper">
 
     <div class="modal_fon">
+        <!--СПАСИБО -->
+        <div class="thenk_block">
+            <a href="javascript:void(0)" class="close"><i></i></a>
+            <div class="thenk_block__adres">
+                <p>г.Ростов-на-Дону, пр. Шолохова, д.101</p>
+                <a href="javascript:void(0)"><i></i>Показать на карте</a>
+            </div>
+            <div class="thenk_block_logo">
+                <a href="index.html">
+                    <img src="img/temp_sprite/logo.png" alt="ВИМТЕХ" title="ВИМТЕХ">
+                    <p>Прохлада в доме не должна стоить дорого! </p>
+                </a>
+            </div>
+            <div class="thenk_block_thenk_box">
+                <h3>Спасибо!</h3>
+                <p>Мы Вам перезвоним по телефону: <span id="tel_thenks">+7 (918) 526 75 00</span><br>
+                    в ближайшее время</p>
+            </div>
+            <div class="thenk_block_footer">
+                <a href="javascript:void(0)">Контакты ООО “Вимтех”</a>
+                <p>Телефон претензий и контроля качества <span>+7 (904) 348 59 21</span></p>
+            </div>
+        </div>
+        <!--/СПАСИБО -->
         <!--/////////////////////////////////////////Модальное окно вход/регистрация///////////////////////////////// -->
         <div class="enter_block modal">
             <a href="javascript:void(0)" class="close close enter_close"><i></i></a>
